maps functionality removed again temporarily for Kindle Fire testing, downloading now supported for <3.0 devices yaaay
crittercism crash library also added